# pywsse

./: .gitignore  pyproject.toml  requirements.txt  runtests.py
requirements/: Makefile  py312_base.txt  py312_devci.txt
wsse/: settings.py
wsse/client/coreapi/tests/: test_transport.py
wsse/client/requests/tests/: test_auth.py
wsse/server/django/tests/: urls.py
wsse/server/django/wsse/: models.py
wsse/server/drf/: authentication.py
wsse/server/drf/tests/: test_authentication.py  urls.py
wsse/tests/: settings.py  test_utils.py  urls.py
